# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import categoriesRouter from "./categories";
+import productsRouter from "./products";
+import ordersRouter from "./orders";
+import statsRouter from "./stats";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(categoriesRouter);
+router.use(productsRouter);
+router.use(ordersRouter);
+router.use(statsRouter);
 
 export default router;
